fixed text alignment

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ html,body {
 .main {
 	position: relative;
 	top: 50px;
+	bottom: 50px;
 	text-align: center;
 }
 
